RESOLVED FIXED33411
Cannot focus on an empty editable span in a non editable div.
https://bugs.webkit.org/show_bug.cgi?id=33411
Summary Cannot focus on an empty editable span in a non editable div.
Enrica Casucci
Reported 2010-01-08 16:58:38 PST
Cannot focus on an empty editable span in a non editable div.
Attachments
Patch (11.57 KB, patch)
2010-01-08 17:12 PST, Enrica Casucci
no flags
Patch (11.59 KB, patch)
2010-01-08 17:21 PST, Enrica Casucci
darin: review+
Enrica Casucci
Comment 1 2010-01-08 17:12:47 PST
WebKit Review Bot
Comment 2 2010-01-08 17:16:18 PST
Attachment 46182 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:14: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:16: Line contains tab character. [whitespace/tab] [5] Total errors found: 3
Enrica Casucci
Comment 3 2010-01-08 17:21:48 PST
Enrica Casucci
Comment 4 2010-01-11 10:06:09 PST
Committed revision 53085
Eric Seidel (no email)
Comment 5 2010-01-11 14:00:12 PST
This checkin caused a failure for the Gtk bots as well: http://build.webkit.org/results/GTK%20Linux%20Release/r53096%20(7507)/editing/deleting/5115601-diffs.txt --- layout-test-results/editing/deleting/5115601-expected.txt 2010-01-11 13:49:26.000000000 -0800 +++ layout-test-results/editing/deleting/5115601-actual.txt 2010-01-11 13:49:26.000000000 -0800 @@ -16,6 +16,5 @@ RenderInline {SPAN} at (0,0) size 298x20 RenderText {#text} at (2,2) size 298x20 text run at (2,2) width 298: "This sentence should be inside the editable cell." - RenderBR {BR} at (300,17) size 0x0 RenderBlock (anonymous) at (0,30) size 784x0 caret: position 0 of child 0 {#text} of child 0 {SPAN} of child 0 {SPAN} of child 0 {TD} of child 0 {TR} of child 0 {TBODY} of child 1 {TABLE} of child 2 {DIV} of child 1 {BODY} of child 0 {HTML} of document I assume it just needs a new baseline? The failure was hard to notice because the bot was broken due to checkins from earlier this morning.
Note You need to log in before you can comment on or make changes to this bug.