Cannot focus on an empty editable span in a non editable div. https://bugs.webkit.org/show_bug.cgi?id=33411 <rdar://problem/5982901>

Reviewed by Darin Adler.

WebCore:

We now allow to set the focus inside an empty inline element if it is the only
editable element inside non-editable content.

* dom/Position.cpp:
(WebCore::Position::isCandidate): Extended to allow positions in inline elements when
at the border between editable and non editable content.
(WebCore::Position::getInlineBoxAndOffset): Modified to be able to calculate the caret
position inside an empty inline.
* editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::mergeParagraphs): When merging, we don't always find a break
element, since now an editable inline is a VisiblePosition if it is at editability boundary.
* editing/VisibleSelection.h: Updated comment on the use of Position member variables
instead of VisiblePosition.
* page/Frame.cpp:
(WebCore::Frame::selectionLayoutChanged): Changed to avoid multiple calls to upstream and
downstream on the same position.

LayoutTests:

* editing/deleting/6026335-expected.txt: Updated to reflect the lack of extra break element.
* editing/selection/mixed-editability-10-expected.txt: Updated to cover the new case.
* editing/selection/mixed-editability-10.html: Updated to cover the new case.
* platform/mac/editing/deleting/5115601-expected.txt: Updated to reflect the lack of extra break element.



Canonical link: https://commits.webkit.org/44493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53085 268f45cc-cd09-0410-ab3c-d52691b4dbfc